--- a/assignment_gđ01/base.css
+++ b/assignment_gđ01/base.css
@@ -66,10 +66,11 @@ ul {
 .signing ul li a {
     text-decoration: none;
     color: #fff;
+    transition: color 0.2s linear;
 }
 
 .signing ul li a:hover {
-    color: orangered;
+    color: #000;
 }
 
 
@@ -151,6 +152,11 @@ button[type="button"] {
     border-radius: 3px;
     width: 100px;
     background-color: #fff;
+    cursor: pointer;
+}
+
+button[type="button"]:hover {
+    background-color: #ccc;
 }
 
 
@@ -172,7 +178,7 @@ aside {
 }
 
 .aside_content {
-    background-color: #fff;
+    /* background-color: #fff; */
     padding: 20px;
     box-shadow: 0 0 10px #999;
     border-radius: 15px;
@@ -237,7 +243,7 @@ article>a {
 }
 
 article>a:hover {
-    top: -3px;
+    top: -10px;
     /* border: 1px solid orangered; */
     box-shadow: 0 0 15px orangered;
 }
