--- a/vinhdnqph26105_assignment/css/base.css
+++ b/vinhdnqph26105_assignment/css/base.css
@@ -497,9 +497,18 @@ table td {
     margin: 20px auto;
 }
 
+
+.data-form.have-data {
+    border: 2px solid #1a94ff;
+    border-radius: 15px;
+    box-sizing: border-box;
+    padding: 20px;
+}
+
 .data {
     display: inline-block;
     width: 100%;
+    margin: 5px 0;
 }
 
 .data h1 {
